--- a/Diamond Price Prediction.ipynb
+++ b/Diamond Price Prediction.ipynb
@@ -6881,7 +6881,7 @@
     "import os\n",
     "if __name__ ==\"__main__\":\n",
     "    \n",
-    "    app.run(host='127.0.0.1', port=8080, threaded=True, debug=True, use_reloader=False)"
+    "    app.run(debug=True)"
    ]
   },
   {
